[project]
name = "temporal-takehome"
version = "0.1.0"
description = "A customer loyalty program built on Temporal."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "temporalio==1.10.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "pytest-cov==6.1.1",
]

[tool.pytest.ini_options]
minversion = "8.3"
addopts = "-ra -q --cov=."
testpaths = []
log_cli = "True"
